--- a/CaseStudy1.Rmd
+++ b/CaseStudy1.Rmd
@@ -9,19 +9,11 @@ output:
 
 
   
-         
+    
+      
+      
 #Introduction 
-
-The purpose of this paper is to explore the GDPs and income groups of the countries of the world. We have data that has been pulled from the worldbank online databank for the countries that have records of reported GDP among other data. 
-
-The source URLs are:   
-
-EDU data: http://data.worldbank.org/data-catalog/ed-stats  
-
-GDP data: http://data.worldbank.org/data-catalog/GDP-ranking-table  
-
-
-We have two raw csv files: one containing the GDP information and another containing other important economic statistics such as income group. The worldbank data are updated retroactively to reflect the most recent updates on the 2015 statistics.
+The purpose of this paper is to explore the GDPs and income groups of the countries of the world. We have data that has been pulled from the worldbank online databank for the countries that have records of reported GDP among other data. We have two raw csv files: one containing the GDP information and another containing other important economic statistics such as income group. The worldbank data are updated retroactively to reflect the most recent updates on the 2015 statistics.
 
 Our goal is to answer the following questions: 
 
@@ -41,7 +33,6 @@ GDP?
   
     
 #The Data
-
 ####Important Note: *Please set your working directory to the directory containing the downloaded files from Github*
   
   
@@ -55,31 +46,24 @@ Our remaining dataset includes 189 countries with data on the the GDP in Million
 
 
 #Analysis
-
 ##1
-
-**After we merge our two data sets, how many of the IDs match?**
+After we merge our two data sets, how many of the IDs match?
 ```{r}
 length(both$C_Code)
 ```
 189 Country Codes match.
 
 ##2
-
-**Which country ranks #13 in the ascending list of GDPs?**
-
-```{r}
-length(both$C_Code)
-```
-
-The 13th Country in sorted descending dataframe is St. Kitts and Nevis. 
-
-##3
-
-**What is the average GDP rankings for the High Income: OECD countries?**
-
+Which country ranks #13 in the ascending list of GDPs?
 ```{r}
 both$Rank <- as.numeric(gsub("[^[:digit:]]","", both$ID))
+both$Country.y[both$Rank == 13]
+```
+13th Country in sorted ascending dataframe is Spain
+
+##3
+What is the average GDP rankings for the High Income: OECD countries?
+```{r}
 highoecd <- (both$Rank[both$Income.Group=="High income: OECD"])
 sumhighoecd <- sum(highoecd)
 counthighoecd <- length(highoecd)
@@ -88,7 +72,7 @@ avghighoecd
 ```
 The average GDP rankings for the High Income: OECD countries is 32.9, or about 33.   
 
-**What is the average GDP rankings for the High Income: nonOECD countries?**
+What is the average GDP rankings for the High Income: nonOECD countries?
 ```{r}
 highnon <- (both$Rank[both$Income.Group=="High income: nonOECD"])
 sumhighnon <- sum(highnon)
@@ -98,12 +82,10 @@ avghighnon
 ```
 The average GDP rankings for the High Income: nonOECD countries is 91.9, or about 92.  
 
-The average rankings of the High Income countries shows that the countries in OECD have, on average, higher GDPs than those countries with high incomes but are not part of OECD.
+The average rankings of the High Income countries shows that the countries in OECD have, on average, higher GDPs thank those countries with high incomes but are not part of OECD.
 
 ##4
-
-**Scatter Plot of GDP for all Countries**
-
+Scatter Plot of GDP for all Countries
 ```{r}
 library(ggplot2)
 p <- ggplot(both, aes(Rank,GDP_Mills))
@@ -113,7 +95,6 @@ p
 ```
   
   The United States clearly has the highest GDP by far. The scatter plot is hard to read because the U.S. is an outlier for this data. We can see that there is a huge GDP disparity between the top 5 countries and the rest. 
-  
 ```{r}
 tail(both$C_Code, n=5)
 ```
@@ -121,9 +102,7 @@ The top 5 countries in GDP are USA, China, Japan, Germany, and France
 
 
 ##5 
-
-**GDP Rankings versus Income Group**
-
+GDP Rankings versus Income Group
 ```{r}
 both$qnt <- cut(both$Rank, breaks=quantile(both$Rank, probs=seq(0,1,0.2)), labels=1:5, include.lowest=TRUE)
 otable <- table(both$Income.Group, both$qnt)
@@ -136,8 +115,6 @@ We can tell from the table that for the Lower-middle income group, 5 countries a
 There are 5 countries that are lower-middle income but among the top 38 nations with the highest GDP. 
 
 
-  
-  
-#Conclusion
 
+#Conclusion
 By running analysis on countries given their GDP and Income Groups we can glean insights into which countries lead the world in production and consumption. We have discovered that a few countries have disproportionally high GDPs, and that most countries have relatively similar GDPs. We can also see that the Income Group is a good indication of how high that country's GDP will be, but there are still cases where low income countries have high GDPs. This is likely due to the fact that GDP is calculated on a number of other factors besides income. There is much more analysis that we can explore with this data. Please use this data as presented on github to contribute to this analysis. 
